--- a/app/src/main/res/layout/activity_athletic.xml
+++ b/app/src/main/res/layout/activity_athletic.xml
@@ -12,29 +12,66 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/expanded_toolbar"
-            android:minHeight="@dimen/abc_action_bar_default_height_material"
-            android:background="@drawable/k_banner_fab"
-            app:theme="@style/Toolbar"
-            app:popupTheme="@style/Theme.AppCompat.Light"
-            />
-
-
-        <!-- The main content view -->
         <FrameLayout
-            android:id="@+id/content_frame"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            >
 
-            <TextView
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/expanded_toolbar"
+                android:minHeight="@dimen/abc_action_bar_default_height_material"
+                android:background="@color/kzooOrange"
+                app:theme="@style/Toolbar"
+                app:popupTheme="@style/Theme.AppCompat.Light"
+                />
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Sports!"/>
+                android:orientation="horizontal"
+                android:layout_gravity="right|center_vertical"
+                android:layout_marginRight="10dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/white"
+                    android:textStyle="bold"
+                    android:text="@string/men"/>
+
+                <Switch
+                    android:id="@+id/boys_girls_switch"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    android:textColor="@color/white"
+                    android:text="@string/women"/>
+
+            </LinearLayout>
+
+            <com.techhab.collegeapp.PagerSlidingTabStrip
+                android:id="@+id/tabs"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:layout_gravity="bottom"
+                android:scrollbars="none"
+                android:fillViewport="true"
+                android:clipToPadding="false"
+                app:pstsPaddingMiddle="true" />
 
         </FrameLayout>
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/pager"
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent"
+            tools:context=".AcademicActivity"/>
 
     </LinearLayout>
 
