--- a/app/src/main/res/menu/menu_athletic.xml
+++ b/app/src/main/res/menu/menu_athletic.xml
@@ -1,10 +1,8 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.techhab.collegeapp.AthleticActivity">
-    <!--<item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" android:showAsAction="never" />-->
-
+<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
+    <!-- Search Action -->
     <item android:id="@+id/action_search"
         android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
-        android:title="@string/action_search" />
+        android:title="@string/action_search"
+        app:showAsAction="ifRoom" />
+
 </menu>
