--- a/app/src/main/res/layout/fragment_cafeteria.xml
+++ b/app/src/main/res/layout/fragment_cafeteria.xml
@@ -22,9 +22,8 @@
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:orientation="vertical">
-
                 <RelativeLayout
-                    android:id="@+id/btn_cafeteria_richardson"
+                    android:id="@+id/btn_cafeteria_welles"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/btn_whitebackground"
@@ -32,6 +31,45 @@
 
                     <TextView
                         android:id="@+id/tv01"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="5dp"
+                        android:layout_marginEnd="5dp"
+                        android:text="@string/label_cafeteria_welles"
+                        android:textSize="18dp"
+                        android:textColor="@color/black"
+                        android:textStyle="bold"
+                        android:layout_alignParentTop="true"/>
+                    <TextView android:id="@+id/tvWellesCafe"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/tv01"
+                        android:paddingTop="3dp"
+                        android:text="8:00am - 10:00pm"/>
+                    <TextView android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Open"
+                        android:textColor="@color/blue"
+                        android:textSize="18dp"
+                        android:drawableRight="@drawable/bt_next_blue"
+                        android:drawablePadding="3dp"
+                        android:layout_centerVertical="true"
+                        android:layout_alignParentRight="true"
+                        android:layout_alignParentEnd="true"
+                        android:id="@+id/tvWellesCafeStatus"/>
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/btn_cafeteria_richardson"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="1dp"
+                    android:background="@drawable/btn_whitebackground"
+                    android:padding="10dp">
+
+                    <TextView
+                        android:id="@+id/tv02"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginRight="5dp"
@@ -44,7 +82,7 @@
                     <TextView android:id="@+id/tvRichardsonCafe"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/tv01"
+                        android:layout_below="@+id/tv02"
                         android:paddingTop="3dp"
                         android:text="8:00am - 10:00pm"/>
                     <TextView android:layout_width="wrap_content"
@@ -62,14 +100,14 @@
                 </RelativeLayout>
 
                 <RelativeLayout
-                    android:layout_marginTop="5dp"
+                    android:layout_marginTop="1dp"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/btn_whitebackground"
                     android:padding="10dp">
 
                     <TextView
-                        android:id="@+id/tv02"
+                        android:id="@+id/tv03"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginRight="5dp"
@@ -81,7 +119,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/tv02"
+                        android:layout_below="@+id/tv03"
                         android:layout_marginRight="5dp"
                         android:paddingTop="3dp"
                         android:text="8:00am - 10:00pm"
@@ -115,7 +153,7 @@
                         android:src="@drawable/phone"
                         android:layout_alignParentLeft="true"/>
                     <TextView
-                        android:id="@+id/tv03"
+                        android:id="@+id/tv04"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginRight="5dp"
@@ -126,7 +164,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/tv03"
+                        android:layout_below="@+id/tv04"
                         android:text="@string/label_cafeteria_phone"
                         android:layout_toRightOf="@+id/img01"
                         android:layout_marginRight="5dp"
