--- a/app/src/main/res/layout/fragment_fall_term.xml
+++ b/app/src/main/res/layout/fragment_fall_term.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent">
     <ListView android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/lvRichardson_menu_breakfast"/>
+        android:id="@+id/lvFall_term"
+        android:background="@+color/white"/>
 
 </LinearLayout>
