Nav drawer is 98% done, but still need to fix initialization bug

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -45,10 +45,9 @@
 
     <!--Navigation Drawer-->
     <fragment android:id="@+id/home_navigation_drawer"
-        android:layout_width="@dimen/navigation_drawer_width"
+        style="@style/NavDrawer"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:name="com.techhab.collegeapp.NavigationDrawerFragment" />
-
 
  </android.support.v4.widget.DrawerLayout>
