--- a/app/src/main/res/layout/fragment_basketball.xml
+++ b/app/src/main/res/layout/fragment_basketball.xml
@@ -17,8 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_margin="3dp"
-        card_view:cardElevation="2dp"
-        card_view:cardCornerRadius="3dp"
+        style="@style/CardView"
         android:foregroundGravity="top">
 
         <LinearLayout
