--- a/app/src/main/res/layout/fragment_calender.xml
+++ b/app/src/main/res/layout/fragment_calender.xml
@@ -2,145 +2,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/WhiteSmoke"
     tools:context="com.techhab.collegeapp.CalendarFragment">
 
-
-    <ScrollView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/my_recycler_view"
+        android:scrollbars="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <LinearLayout
-            android:orientation="vertical"
-            android:id="@+id/panel_side_calendar"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:showDividers="middle"
-            android:divider="?android:dividerHorizontal">
-
-
-            <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:orientation="vertical">
-                <RelativeLayout
-                    android:id="@+id/btn_calendar_2015"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/btn_whitebackground"
-                    android:padding="20dp">
-
-                    <TextView
-                        android:id="@+id/tv01"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="10dp"
-                        android:layout_marginEnd="10dp"
-                        android:text="@string/academic_year"
-                        android:textSize="18dp"
-                        android:textColor="@color/black"
-                        android:textStyle="bold"
-                        android:layout_alignParentTop="true"/>
-                    <TextView
-                        android:id="@+id/tvCalender2015"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_toRightOf="@+id/tv01"
-                        android:textSize="18dp"
-                        android:textColor="@color/kzooOrange"
-                        android:textStyle="italic"
-                        android:text="@string/academic_year_2014_15"/>
-                    <TextView android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/blue"
-                        android:textSize="18dp"
-                        android:drawableRight="@drawable/bt_next_blue"
-                        android:layout_centerVertical="true"
-                        android:layout_alignParentRight="true"
-                        android:layout_alignParentEnd="true"/>
-
-                </RelativeLayout>
-
-                <RelativeLayout
-                    android:id="@+id/btn_calendar_2016"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/btn_whitebackground"
-                    android:layout_marginTop="1dp"
-                    android:padding="20dp">
-
-                    <TextView
-                        android:id="@+id/tv02"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="10dp"
-                        android:layout_marginEnd="10dp"
-                        android:text="@string/academic_year"
-                        android:textSize="18dp"
-                        android:textColor="@color/black"
-                        android:textStyle="bold"
-                        android:layout_alignParentTop="true"/>
-                    <TextView
-                        android:id="@+id/tvCalender2016"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_toRightOf="@+id/tv02"
-                        android:textSize="18dp"
-                        android:textStyle="italic"
-                        android:textColor="@color/kzooOrange"
-                        android:text="@string/academic_year_2015_16"/>
-                    <TextView android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/blue"
-                        android:textSize="18dp"
-                        android:drawableRight="@drawable/bt_next_blue"
-                        android:layout_centerVertical="true"
-                        android:layout_alignParentRight="true"
-                        android:layout_alignParentEnd="true"/>
-
-                </RelativeLayout>
-                <RelativeLayout
-                    android:id="@+id/btn_calendar_2017"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/btn_whitebackground"
-                    android:layout_marginTop="1dp"
-                    android:padding="20dp">
-
-                    <TextView
-                        android:id="@+id/tv03"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="10dp"
-                        android:layout_marginEnd="10dp"
-                        android:text="@string/academic_year"
-                        android:textSize="18dp"
-                        android:textColor="@color/black"
-                        android:textStyle="bold"
-                        android:layout_alignParentTop="true"/>
-                    <TextView
-                        android:id="@+id/tvCalender2017"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_toRightOf="@+id/tv03"
-                        android:textSize="18dp"
-                        android:textColor="@color/kzooOrange"
-                        android:textStyle="italic"
-                        android:text="@string/academic_year_2016_17"/>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/blue"
-                        android:textSize="18dp"
-                        android:drawableRight="@drawable/bt_next_blue"
-                        android:layout_centerVertical="true"
-                        android:layout_alignParentRight="true"
-                        android:layout_alignParentEnd="true"/>
-
-                </RelativeLayout>
-
-            </LinearLayout>
-        </LinearLayout>
-    </ScrollView>
-
+        android:layout_height="match_parent"/>
 
 </FrameLayout>
